--- a/SinglePlayerOffice/SinglePlayerOffice.csproj
+++ b/SinglePlayerOffice/SinglePlayerOffice.csproj
@@ -49,36 +49,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arcadius.cs" />
-    <Compile Include="Building.cs" />
-    <Compile Include="Entrance.cs" />
-    <Compile Include="Garage.cs" />
-    <Compile Include="HeliPad.cs" />
-    <Compile Include="InteractionsController.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="GarageDecorationStyle.cs" />
-    <Compile Include="GarageLightingStyle.cs" />
-    <Compile Include="GarageNumberingStyle.cs" />
+    <Compile Include="Buildings\Arcadius.cs" />
+    <Compile Include="Building\Building.cs" />
+    <Compile Include="Building\Entrance.cs" />
+    <Compile Include="Building\Garage.cs" />
+    <Compile Include="Building\HeliPad.cs" />
+    <Compile Include="Interactions\InteractionsController.cs" />
+    <Compile Include="Building\Location.cs" />
+    <Compile Include="Building\GarageDecorationStyle.cs" />
+    <Compile Include="Building\GarageLightingStyle.cs" />
+    <Compile Include="Building\GarageNumberingStyle.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="LomBank.cs" />
-    <Compile Include="ModShop.cs" />
-    <Compile Include="Office.cs" />
+    <Compile Include="Buildings\LomBank.cs" />
+    <Compile Include="Building\ModShop.cs" />
+    <Compile Include="Building\Office.cs" />
     <Compile Include="SinglePlayerOffice.cs" />
-    <Compile Include="MazeBank.cs" />
-    <Compile Include="MazeBankWest.cs" />
-    <Compile Include="ModShopFloorStyle.cs" />
-    <Compile Include="OfficeInteriorStyle.cs" />
-    <Compile Include="Owner.cs" />
+    <Compile Include="Buildings\MazeBank.cs" />
+    <Compile Include="Buildings\MazeBankWest.cs" />
+    <Compile Include="Building\ModShopFloorStyle.cs" />
+    <Compile Include="Building\OfficeInteriorStyle.cs" />
+    <Compile Include="Building\Owner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="RadioStation.cs" />
-    <Compile Include="ScenesController.cs" />
-    <Compile Include="Sofa.cs" />
-    <Compile Include="Wardrobe.cs" />
+    <Compile Include="Interactions\RadioStation.cs" />
+    <Compile Include="Scenes\ScenesController.cs" />
+    <Compile Include="Interactions\Sofa.cs" />
+    <Compile Include="Interactions\Wardrobe.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
