--- a/SinglePlayerOffice/SinglePlayerOffice.csproj
+++ b/SinglePlayerOffice/SinglePlayerOffice.csproj
@@ -56,13 +56,14 @@
     <Compile Include="Building\HeliPad.cs" />
     <Compile Include="Building\GarageEntrance.cs" />
     <Compile Include="Building\IInterior.cs" />
-    <Compile Include="Interactions\InteractionsController.cs" />
+    <Compile Include="Interactions\Interactions.cs" />
     <Compile Include="Building\Location.cs" />
     <Compile Include="Building\InteriorStyle.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Buildings\LomBank.cs" />
     <Compile Include="Building\ModShop.cs" />
     <Compile Include="Building\Office.cs" />
+    <Compile Include="Scenes\OfficeScene.cs" />
     <Compile Include="Vehicle\NeonLight.cs" />
     <Compile Include="SinglePlayerOffice.cs" />
     <Compile Include="Buildings\MazeBank.cs" />
@@ -75,7 +76,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Interactions\RadioStation.cs" />
-    <Compile Include="Scenes\ScenesController.cs" />
     <Compile Include="Interactions\Sofa.cs" />
     <Compile Include="Interactions\Wardrobe.cs" />
     <Compile Include="Vehicle\VehicleMod.cs" />
