Rewrite interaction system

--- a/SinglePlayerOffice/SinglePlayerOffice.csproj
+++ b/SinglePlayerOffice/SinglePlayerOffice.csproj
@@ -57,37 +57,31 @@
     <Compile Include="Building\HeliPad.cs" />
     <Compile Include="Building\GarageEntrance.cs" />
     <Compile Include="Building\IInterior.cs" />
-    <Compile Include="Interactions\BossChairInteraction.cs" />
-    <Compile Include="Interactions\BossInteraction.cs" />
-    <Compile Include="Interactions\BuildingNameInteraction.cs" />
-    <Compile Include="Interactions\ComputerInteraction.cs" />
-    <Compile Include="Interactions\FemaleStaffInteraction.cs" />
-    <Compile Include="Interactions\GarageEntranceInteraction.cs" />
+    <Compile Include="Interactions\Prop\BossChair.cs" />
+    <Compile Include="Interactions\Ped\Boss.cs" />
+    <Compile Include="Interactions\Prop\BuildingNameScaleform.cs" />
+    <Compile Include="Interactions\Prop\Computer.cs" />
+    <Compile Include="Interactions\Ped\Staff.cs" />
+    <Compile Include="Interactions\Prop\VehicleElevatorEntrance.cs" />
     <Compile Include="Interactions\Interaction.cs" />
-    <Compile Include="Interactions\INPCInteraction.cs" />
-    <Compile Include="Interactions\LaptopInteraction.cs" />
-    <Compile Include="Interactions\LeftSafeInteraction.cs" />
-    <Compile Include="Interactions\MaleStaffInteraction.cs" />
-    <Compile Include="Interactions\PAInteraction.cs" />
-    <Compile Include="Interactions\RadioInteraction.cs" />
-    <Compile Include="Interactions\RightSafeInteraction.cs" />
-    <Compile Include="Interactions\SofaInteraction.cs" />
-    <Compile Include="Interactions\SofaWithTVInteraction.cs" />
-    <Compile Include="Interactions\StaffChairInteraction.cs" />
-    <Compile Include="Interactions\TVInteration.cs" />
-    <Compile Include="Interactions\VehicleElevatorInteraction.cs" />
-    <Compile Include="Interactions\VehicleInfoInteraction.cs" />
-    <Compile Include="Interactions\WardrobeInteraction.cs" />
-    <Compile Include="Scenes\GarageEntranceScene.cs" />
-    <Compile Include="Scenes\GarageScene.cs" />
+    <Compile Include="Interactions\Prop\Laptop.cs" />
+    <Compile Include="Interactions\Prop\LeftSafe.cs" />
+    <Compile Include="Interactions\Ped\Pa.cs" />
+    <Compile Include="Interactions\Prop\Radio.cs" />
+    <Compile Include="Interactions\Prop\RightSafe.cs" />
+    <Compile Include="Interactions\Prop\Sofa.cs" />
+    <Compile Include="Interactions\Prop\SofaAndTv.cs" />
+    <Compile Include="Interactions\Prop\BoardRoomChair.cs" />
+    <Compile Include="Interactions\Prop\Tv.cs" />
+    <Compile Include="Interactions\Prop\VehicleElevator.cs" />
+    <Compile Include="Interactions\Prop\VehicleInfoScaleform.cs" />
+    <Compile Include="Interactions\Prop\Wardrobe.cs" />
     <Compile Include="Building\Location.cs" />
     <Compile Include="Building\InteriorStyle.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Buildings\LomBank.cs" />
     <Compile Include="Building\ModShop.cs" />
     <Compile Include="Building\Office.cs" />
-    <Compile Include="Scenes\Scene.cs" />
-    <Compile Include="Scenes\OfficeScene.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Vehicle\NeonLight.cs" />
     <Compile Include="SinglePlayerOffice.cs" />
