--- a/SinglePlayerOffice/SinglePlayerOffice.csproj
+++ b/SinglePlayerOffice/SinglePlayerOffice.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Buildings\LomBank.cs" />
     <Compile Include="Building\ModShop.cs" />
     <Compile Include="Building\Office.cs" />
+    <Compile Include="UI.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Vehicle\NeonLight.cs" />
     <Compile Include="SinglePlayerOffice.cs" />
@@ -103,6 +104,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
