Fix bug vehicle falls through world when trying to re-enter garage

--- a/SinglePlayerOffice/SinglePlayerOffice.csproj
+++ b/SinglePlayerOffice/SinglePlayerOffice.csproj
@@ -115,6 +115,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY "$(TargetPath)" "D:\Games\Steam\steamapps\common\Grand Theft Auto V\scripts"</PostBuildEvent>
+    <PostBuildEvent>COPY "$(TargetPath)" "\\PANDORA\scripts"</PostBuildEvent>
   </PropertyGroup>
 </Project>
